--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.11.0",
     "@react-three/drei": "^9.83.1",
     "@react-three/fiber": "^8.14.1",
+    "@types/three": "^0.156.0",
     "framer-motion": "^10.16.4",
     "maath": "^0.7.0",
     "react": "^18.2.0",
